# stable_fluids

./: README.md  fluid.py  pyproject.toml
src/: fluid_solver.py  main.py  math_helper.py  math_helper3.py  visualizer.py
tests/: fluid_solver_test.py  math_helper_test.py
